# btarget-example-project

./: .gitignore  README.md
.claude/: config.json
.devcontainer/: devcontainer.json
run/: target.sh
run/containers/: run.sh
run/containers/workspace/: Dockerfile  init-container.sh
run/containers/workspace/container-resources/: post-create-command.sh  setup-local-terminal.sh
run/containers/workspace/init-container/: 100-init-vscode-local-terminal.sh  101-init-workspace.sh  102-init-python.sh  102-init-uv.sh  103-init-poetry.sh  103-setup-claude.sh  104-init-claude-code-mcp.sh  105-init-claude-code-mcp.sh  900-init-workspace.sh
run/containers/workspace/init-resources/: 104-setup-claude-mcp.sh
run/devcontainer/: .env example.cygwin  .env.example  .env.example.cygwin  .env.example.mac  .env.example.wsl  .env.exaple.mac  .gitignore  Dockerfile.base  Dockerfile.user-workspace  Dockerfile.workspace  docker-compose.yaml  docker-make.bat  docker-make.sh  run.sh  target.sh  task.devcontainer.sh  workspace.Dockerfile  workspace.task.sh
run/devcontainer/compose/: .env.example  docker-compose.yaml  run.sh
run/devcontainer/containers/workspace/: Dockerfile  Dockerfile.base  (+2 more)
run/devcontainer/init-container/: 103-init-claude-code.sh
run/devcontainer/workspace/: .gitignore  Dockerfile.base  make.sh
run/on-workspace/: pyproject.toml  run.sh
run/on-workspace/example-workflow/: run.sh
run/on-workspace/workflow/: run.sh
run/project-creator/: run.sh  task.sh
run/shell-tester/: run.sh  run.sh.bats
run/supports/: run.sh
run/workflow-on-workspace/: run.sh
(+8 files in other folders)
