[tool.poetry]
name = "btarget-example-project"
version = "0.1.0"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^23.1.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev = ["pytest", "black", "mypy"]

[tool.black]
line-length = 120
target-version = ["py312"]
#include = '\.pyi?$'
#exclude = '''
#/(
#    \.eggs
#  | \.git
#  | \.hg
#  | \.mypy_cache
#  | \.tox
#  | \.venv
#  | _build
#  | buck-out
#  | build
#  | dist
#)/
#'''

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["first-agent/tests"]
